# ogs

./: CMakeLists.txt
Applications/ApplicationsLib/: ProjectData.cpp
Applications/CLI/: CMakeLists.txt  Tests.cmake  ogs.cpp
Applications/Utils/: CMakeLists.txt
Applications/Utils/Interfaces/: CMakeLists.txt
Applications/Utils/Interfaces/Bettina/: Avicennia.cpp  Avicennia.h  CMakeLists.txt  Flora.cpp  Flora.h  Globals.cpp  Globals.h  Land.cpp  Land.h  NearestNodeTable.cpp  NearestNodeTable.h  Output.cpp  Output.h  Rhizophora.cpp  Rhizophora.h  Tree.cpp  Tree.h  avicennia.cpp  avicennia.h  bettina.cpp  globals.cpp  globals.h  land.cpp  land.h  rhizophora.cpp  rhizophora.h  tree.cpp  tree.h
AssemblerLib/: SerialExecutor.h  SimpleAssembler.h  VectorMatrixAssembler.h
MaterialLib/: CMakeLists.txt
MaterialLib/Fluid/: PropertyVariableType.h
MaterialLib/Fluid/Density/: CreateFluidDensityModel.cpp  LinearConcentrationDependentDensity.h
MaterialLib/PorousMedium/Tortuosity/: ConstantTortuosity.h  Tortuosity.h  createTortuosityModel.cpp  createTortuosityModel.h
MathLib/LinAlg/Dense/: GlobalDenseMatrix-impl.h
MathLib/LinAlg/Lis/: LisMatrix.h  LisOption.cpp
MeshGeoToolsLib/: MeshNodeSearcher.cpp  MeshNodeSearcher.h  MeshNodesAlongPolyline.cpp  MeshNodesToPoints.cpp  MeshNodesToPoints.h  SearchLength.h
MeshLib/Elements/: TemplateLine-impl.h  TemplateLine.h  TemplateTri-impl.h  TemplateTri.h
NumLib/Fem/CoordinatesMapping/: ShapeMatrices.h
NumLib/Fem/ShapeFunction/: ShapeQuad4.h
ProcessLib/: BoundaryCondition.h  CMakeLists.txt  GroundwaterFlowFEM.h  GroundwaterFlowProcess.h  NeumannBC.h  NeumannBCAssembler.h  ProcessVariable.cpp  ProcessVariable.h
ProcessLib/HC/: CreateHCProcess.cpp  CreatePorousMediaProperties.cpp  HCFEM.h  HCProcess.h  HCProcessData.h  PorousMediaProperties.cpp  PorousMediaProperties.h
ProcessLib/HT/: CreateHTProcess.cpp  HTFEM.h
ProcessLib/RichardsComponentTransport/: RichardsComponentTransportFEM.h  RichardsComponentTransportProcess.cpp  RichardsComponentTransportProcess.h
ProcessLib/RichardsFlow/: Tests.cmake
SimpleTests/FemTests/: CMakeLists.txt  SimpleGroundWaterFlow.cpp  mHM_Communication.h
Tests/Data/Elliptic/cube_1x1x1_GroundWaterFlow/: cube_1e0_neumann.prj.md5  cube_1e1_neumann.prj.md5  cube_1e2_neumann.prj.md5  cube_1e3_neumann.prj.md5  cube_1e4_neumann.prj.md5  cube_1e5_neumann.prj.md5  cube_1e6_neumann.prj.md5  cube_2e4_neumann.prj.md5  cube_3e4_neumann.prj.md5  cube_4e4_neumann.prj.md5  cube_5e4_neumann.prj.md5
Tests/Data/Elliptic/square_1x1_GroundWaterFlow/: square_1e0_neumann.prj.md5  square_1e1_neumann.prj.md5  square_1e2_neumann.prj.md5  square_1e3_neumann.prj.md5  square_1e4_neumann.prj.md5  square_1e5_neumann.prj.md5  square_1e6_neumann.prj.md5
Tests/Data/Parabolic/Richards/infiltration_1D/: 1d-infiltration.prj  out_ex1_pcs_0_ts_105_t_7803.496783_expected.vtu  out_ex1_pcs_0_ts_140_t_11303.496783_expected.vtu  out_ex1_pcs_0_ts_175_t_14803.496783_expected.vtu  out_ex1_pcs_0_ts_210_t_18303.496783_expected.vtu  out_ex1_pcs_0_ts_245_t_21803.496783_expected.vtu  out_ex1_pcs_0_ts_280_t_25303.496783_expected.vtu  out_ex1_pcs_0_ts_315_t_28803.496783_expected.vtu  out_ex1_pcs_0_ts_350_t_32191.778033_expected.vtu  out_ex1_pcs_0_ts_35_t_803.496783_expected.vtu  out_ex1_pcs_0_ts_385_t_35468.340533_expected.vtu  out_ex1_pcs_0_ts_420_t_38856.621783_expected.vtu  out_ex1_pcs_0_ts_455_t_42356.621783_expected.vtu  out_ex1_pcs_0_ts_490_t_45856.621783_expected.vtu  out_ex1_pcs_0_ts_525_t_49023.809283_expected.vtu  out_ex1_pcs_0_ts_560_t_52359.746783_expected.vtu  out_ex1_pcs_0_ts_595_t_55686.309283_expected.vtu  out_ex1_pcs_0_ts_630_t_58914.043658_expected.vtu  out_ex1_pcs_0_ts_665_t_61754.588979_expected.vtu  out_ex1_pcs_0_ts_700_t_65142.870229_expected.vtu  out_ex1_pcs_0_ts_70_t_4303.496783_expected.vtu  out_ex1_pcs_0_ts_735_t_68419.432729_expected.vtu  out_ex1_pcs_0_ts_770_t_71286.148472_expected.vtu  out_ex1_pcs_0_ts_805_t_74466.160442_expected.vtu  out_ex1_pcs_0_ts_840_t_77826.316692_expected.vtu  out_ex1_pcs_0_ts_875_t_81102.879192_expected.vtu  out_ex1_pcs_0_ts_910_t_84379.441692_expected.vtu  out_ex1_pcs_0_ts_968_t_86400.000000_expected.vtu
Tests/NumLib/: TestFeQuad4.cpp
Utils/MeshGeoTools/: CMakeLists.txt  ComputeSurfaceNodeIDsInPolygonalRegion.cpp
mhm/: .project  CMakeLists.txt  README.md  mHMCommunication.h  mHM_MainCaller.f90
mhm/lib/: CMakeLists.txt  mo_finish.f90  mo_nml.f90
mhm/src/: CMakeLists.txt  mhm_driver.f90
scripts/cmake/: Find.cmake
web/content/docs/benchmarks/hydro-component/: elder.md
web/content/docs/benchmarks/richards-flow/: richards-component-transport.md
